<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">cloudmall</string>

    <string name="sign_up">注册</string>
    <string name="id">用户名</string>
    <string name="password">密码</string>
    <string name="password_confirm">确认密码</string>
    <string name="e_mail">邮箱</string>
    <string name="phone_number">手机号码</string>
    <string name="switch_to_login">已有账号，立即登录</string>

    <string name="sign_in">登录</string>
    <string name="switch_to_register">没有账号，去注册一个吧</string>

    <string name="main_page">首页</string>
    <string name="search">搜索</string>

    <string name="sort">分类</string>
    <string name="load_more">查看更多</string>

    <string name="discover">发现</string>

    <string name="cart">购物车</string>
    <string name="clear">清空</string>
    <string name="remove">删除</string>
    <string name="cash">去支付</string>
    <string name="select_all">全选</string>
    <string name="total">总计</string>

    <string name="cancel_payment">取消支付</string>
    <string name="select_payment">请选择支付方式</string>

    <string name="my_order">我的订单</string>
    <string name="all_order">全部订单</string>
    <string name="to_pay">待收款</string>
    <string name="to_receive">待收货</string>
    <string name="to_rate">待评价</string>
    <string name="after_sale">售后</string>
    <string name="no_settings">未设置</string>

    <string name="order_list">订单列表</string>
    <string name="name">姓名</string>
    <string name="address">地址</string>
    <string name="submit">提交</string>
    <string name="settings">设置</string>
    <string name="open_source">开源组件许可</string>

    <string name="rate">评价</string>
    <string name="log_out">退出登录</string>

    <string name="like">联系客服</string>
    <string name="add_to_cart">加入购物车</string>
    <string name="product_detail">商品详情</string>

    <string name="add_address">添加地址</string>
    <string name="hint_name">请输入收货人姓名</string>
    <string name="hint_phone_number">请输入手机号码</string>
    <string name="hint_pick">所在区域</string>
    <string name="area">所在区域</string>
    <string name="choose_area">点此选择</string>
    <string name="detail_address">请输入详细地址</string>
</resources>
