<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:background="#1111"
    android:layout_height="match_parent">
    <android.support.v7.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@color/app_main"
        android:gravity="center">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:id="@+id/cart_clear"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="20dp"
                android:gravity="center"
                android:text="@string/clear"
                android:textColor="@android:color/white"
                android:textSize="18sp"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_centerHorizontal="true"
                android:gravity="center"
                android:text="@string/cart"
                android:textColor="@android:color/white"
                android:textSize="20sp"/>
            <TextView
                android:id="@+id/cart_remove"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentRight="true"
                android:layout_marginRight="20dp"
                android:gravity="center"
                android:text="@string/remove"
                android:textColor="@android:color/white"
                android:textSize="18sp"
                />
        </RelativeLayout>

    </android.support.v7.widget.Toolbar>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/rv_cart"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="8" />

    <android.support.v7.widget.ViewStubCompat
        android:id="@+id/view_stub_cart"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="8"
        android:minHeight="50dp"
        android:background="@android:color/white"
        android:orientation="horizontal"
        android:layout="@layout/stub_cart_empty"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_gravity="bottom"
        android:minHeight="50dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:minHeight="50dp"
            android:orientation="horizontal">

            <com.joanzapata.iconify.widget.IconTextView
                android:id="@+id/cart_select_all"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="{fa-check-circle}"
                android:textColor="@android:color/darker_gray"
                />
            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/select_all"
                android:textColor="@color/app_main"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:minHeight="50dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/total"
                android:textColor="@android:color/darker_gray"
                android:textSize="20sp"
                />
            <TextView
                android:id="@+id/cart_total_price"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center|left"
                android:textColor="@color/app_main"
                android:textSize="20sp"
                />
        </LinearLayout>

        <TextView
            android:id="@+id/to_pay"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/app_main"
            android:gravity="center"
            android:text="@string/cash"
            android:textColor="@android:color/white"
            android:textSize="20sp"/>

    </LinearLayout>
</LinearLayout>