<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <!--头像部分-->
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="160dp"
            android:background="@android:color/holo_orange_dark">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/mine_user_avatar"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="30dp"
                android:src="@mipmap/ic_launcher"/>

            <TextView
                android:id="@+id/mine_user_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="20dp"
                android:textColor="@android:color/white"
                android:text="@string/app_name"
                android:textSize="16sp" />

        </RelativeLayout>

        <!--订单部分-->
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@android:color/white"
            android:orientation="horizontal"
            android:paddingLeft="10dp"
            android:paddingRight="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentLeft="true"
                android:gravity="center"
                android:text="@string/my_order"
                android:textColor="@android:color/black" />

            <TextView
                android:id="@+id/mine_all_order"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_toLeftOf="@+id/mine_all_account_arrow"
                android:gravity="center"
                android:text="@string/all_order"
                android:textColor="@android:color/darker_gray" />

            <com.joanzapata.iconify.widget.IconTextView
                android:id="@+id/mine_all_account_arrow"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentTop="true"
                android:layout_marginLeft="10dp"
                android:gravity="center"
                android:text="{fa-chevron-right}"
                android:textColor="@android:color/darker_gray" />

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:background="@android:color/white"
            android:baselineAligned="true"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/mine_pay"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <com.joanzapata.iconify.widget.IconTextView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_gravity="center_horizontal"
                    android:gravity="center"
                    android:text="{fa-credit-card}"
                    android:textSize="20sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="5dp"
                    android:gravity="center"
                    android:text="@string/to_pay"
                    android:textSize="10sp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/mine_receive"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <com.joanzapata.iconify.widget.IconTextView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_gravity="center_horizontal"
                    android:gravity="center"
                    android:text="{fa-truck}"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/mine_tv_receive"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="5dp"
                    android:gravity="center"
                    android:text="@string/to_receive"
                    android:textSize="10sp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/mine_rate"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <com.joanzapata.iconify.widget.IconTextView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_gravity="center_horizontal"
                    android:gravity="center"
                    android:text="{fa-clone}"
                    android:textSize="20sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="5dp"
                    android:gravity="center"
                    android:text="@string/to_rate"
                    android:textSize="10sp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/mine_after_sale"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <com.joanzapata.iconify.widget.IconTextView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_gravity="center_horizontal"
                    android:gravity="center"
                    android:text="{fa-comments-o}"
                    android:textSize="20sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="5dp"
                    android:gravity="center"
                    android:text="@string/after_sale"
                    android:textSize="10sp" />

            </LinearLayout>

        </LinearLayout>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/mine_personal_setting"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="20dp" />
    </LinearLayout>

</ScrollView>